--- a/public/index.html
+++ b/public/index.html
@@ -5,38 +5,138 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-
+    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link href="https://fonts.googleapis.com/css?family=Gochi+Hand|Montserrat:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/icons.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/news_icons/css/icon_set_1.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/news_icons/css/icon_set_2.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/news_icons/css/icon_set_3.css">
     <!-- Stylesheets -->
     <link href="css/plugins.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="homepages/hotel/css/hotel-style.css" media="screen" />
-    <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="homepages/hotel/css/hotel-style.css"
+      media="screen"
+    />
+    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet" type="text/css">
 
+    <link href="https://fonts.googleapis.com/css?family=Herr+Von+Muellerhoff" rel="stylesheet" type="text/css">
+    <link href="homepages/restaurant/css/restaurant-style.css" media="screen" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
     <!-- JavaScript Libraries -->
     <script src="js/jquery.js"></script>
     <script src="js/plugins.js"></script>
+    <link
+      href="plugins/bootstrap-switch/bootstrap-switch.css"
+      rel="stylesheet"
+    />
+    <script src="plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
     <script src="js/functions.js"></script>
-    
-    <!-- Google Maps -->
-    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyBOksKHb9HyydVB-mcrqKUVfA_LeB79jcQ"></script>
-    <script src="plugins/gmap3/gmap3.min.js"></script>
-    <script src="plugins/gmap3/map-styles.js"></script>
-
+      <!-- SLIDER REVOLUTION 5.x SCRIPTS  -->
+      <link rel="stylesheet" type="text/css" href="plugins/slider-revolution/css/settings.css" media="screen" />
+      <link rel="stylesheet" type="text/css" href="plugins/slider-revolution/css/layers.css">
+      <link rel="stylesheet" type="text/css" href="plugins/slider-revolution/css/navigation.css">
+  
+      <script type="text/javascript" src="plugins/slider-revolution/js/jquery.themepunch.tools.min.js"></script>
+      <script type="text/javascript" src="plugins/slider-revolution/js/jquery.themepunch.revolution.min.js"></script>
+  
+      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.actions.min.js"></script>
+      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.carousel.min.js"></script>
+      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
+      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
+      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.migration.min.js"></script>
+      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.navigation.min.js"></script>
+      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.parallax.min.js"></script>
+      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
+      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.video.min.js"></script>
+  
     <!-- Date & Time Picker -->
+    <!-- Moment.js -->
     <script src="plugins/moment/moment.min.js"></script>
     <script src="plugins/daterangepicker/daterangepicker.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <!-- Owl Carousel CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    />
 
-    <!-- Date Picker Initialization -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/3.1/daterangepicker.min.css"
+    />
+
+    <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css" />
+
     <script>
-      $(function () {
+      jQuery.noConflict();
+      jQuery(function ($) {
         $('input[name="fromDate"]').daterangepicker({
           singleDatePicker: true,
         });
 
         $('input[name="toDate"]').daterangepicker({
           singleDatePicker: true,
+        });
+      });
+    </script>
+
+    <!--Google Maps files-->
+    <script
+      type="text/javascript"
+      src="//maps.googleapis.com/maps/api/js?key=AIzaSyBOksKHb9HyydVB-mcrqKUVfA_LeB79jcQ"
+    ></script>
+    <script type="text/javascript" src="plugins/gmap3/gmap3.min.js"></script>
+    <script type="text/javascript" src="plugins/gmap3/map-styles.js"></script>
+    <!-- Date Picker Initialization -->
+
+    <!-- Owl Carousel CSS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    />
+
+    <!-- Owl Carousel JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
+    <!-- Custom CSS -->
+    <style>
+      .room img {
+        width: 100%;
+        height: auto;
+      }
+      .room-details {
+        padding: 10px;
+        text-align: center;
+      }
+    </style>
+    <script>
+      $(document).ready(function () {
+        $(".carousel").owlCarousel({
+          items: 3,
+          margin: 20,
+          dots: false,
+          loop: true, // Infinite loop
+          autoplay: true,
+          autoplayTimeout: 3000,
         });
       });
     </script>
@@ -47,6 +147,8 @@
 
     <!-- React Root Element -->
     <div id="root"></div>
+
+    <!-- Initialize Owl Carousel -->
 
     <!-- Instructions -->
     <!--
