--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
       }
       .room-details {
         padding: 10px;
-        text-align: center;
+        text-align: left;
       }
     </style>
     <script>
