--- a/public/index.html
+++ b/public/index.html
@@ -12,53 +12,139 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link href="https://fonts.googleapis.com/css?family=Gochi+Hand|Montserrat:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/icons.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/news_icons/css/icon_set_1.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/news_icons/css/icon_set_2.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/news_icons/css/icon_set_3.css">
+
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+    <script src="js/jquery.js"></script>
+    <script src="js/plugins.js"></script>
+
+    <!-- Document title -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Gochi+Hand|Montserrat:300,400,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/icons.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/news_icons/css/icon_set_1.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/news_icons/css/icon_set_2.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/news_icons/css/icon_set_3.css" />
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    
+
     <!-- Stylesheets -->
+
     <link href="css/plugins.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
+
     <link
       rel="stylesheet"
       type="text/css"
       href="homepages/hotel/css/hotel-style.css"
       media="screen"
     />
-    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet" type="text/css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do"
+      rel="stylesheet"
+      type="text/css"
+    />
 
-    <link href="https://fonts.googleapis.com/css?family=Herr+Von+Muellerhoff" rel="stylesheet" type="text/css">
-    <link href="homepages/restaurant/css/restaurant-style.css" media="screen" rel="stylesheet" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Herr+Von+Muellerhoff"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="homepages/restaurant/css/restaurant-style.css"
+      media="screen"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
     <!-- JavaScript Libraries -->
-    <script src="js/jquery.js"></script>
-    <script src="js/plugins.js"></script>
+
     <link
       href="plugins/bootstrap-switch/bootstrap-switch.css"
       rel="stylesheet"
     />
     <script src="plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
     <script src="js/functions.js"></script>
-      <!-- SLIDER REVOLUTION 5.x SCRIPTS  -->
-      <link rel="stylesheet" type="text/css" href="plugins/slider-revolution/css/settings.css" media="screen" />
-      <link rel="stylesheet" type="text/css" href="plugins/slider-revolution/css/layers.css">
-      <link rel="stylesheet" type="text/css" href="plugins/slider-revolution/css/navigation.css">
-  
-      <script type="text/javascript" src="plugins/slider-revolution/js/jquery.themepunch.tools.min.js"></script>
-      <script type="text/javascript" src="plugins/slider-revolution/js/jquery.themepunch.revolution.min.js"></script>
-  
-      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.actions.min.js"></script>
-      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.carousel.min.js"></script>
-      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
-      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
-      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.migration.min.js"></script>
-      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.navigation.min.js"></script>
-      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.parallax.min.js"></script>
-      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
-      <script type="text/javascript" src="plugins/slider-revolution/js/extensions/revolution.extension.video.min.js"></script>
-  
+    <!-- SLIDER REVOLUTION 5.x SCRIPTS  -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="plugins/slider-revolution/css/settings.css"
+      media="screen"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="plugins/slider-revolution/css/layers.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="plugins/slider-revolution/css/navigation.css"
+    />
+
+    <script
+      type="text/javascript"
+      src="plugins/slider-revolution/js/jquery.themepunch.tools.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="plugins/slider-revolution/js/jquery.themepunch.revolution.min.js"
+    ></script>
+
+    <script
+      type="text/javascript"
+      src="plugins/slider-revolution/js/extensions/revolution.extension.actions.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="plugins/slider-revolution/js/extensions/revolution.extension.carousel.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="plugins/slider-revolution/js/extensions/revolution.extension.kenburn.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="plugins/slider-revolution/js/extensions/revolution.extension.layeranimation.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="plugins/slider-revolution/js/extensions/revolution.extension.migration.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="plugins/slider-revolution/js/extensions/revolution.extension.navigation.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="plugins/slider-revolution/js/extensions/revolution.extension.parallax.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="plugins/slider-revolution/js/extensions/revolution.extension.slideanims.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="plugins/slider-revolution/js/extensions/revolution.extension.video.min.js"
+    ></script>
+
     <!-- Date & Time Picker -->
     <!-- Moment.js -->
     <script src="plugins/moment/moment.min.js"></script>
@@ -109,6 +195,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
     />
+    <script src="plugins/rateit/jquery.rateit.min.js"></script>
+    <link rel="stylesheet" href="plugins/rateit/rateit.css" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/rateit.js/1.1.1/rateit.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rateit.js/1.1.1/jquery.rateit.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
