--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,6 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
-    <script src="js/jquery.js"></script>
-    <script src="js/plugins.js"></script>
-
-    <!-- Document title -->
     <link
       href="https://fonts.googleapis.com/css?family=Gochi+Hand|Montserrat:300,400,700"
       rel="stylesheet"
@@ -26,32 +20,13 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/news_icons/css/icon_set_1.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/news_icons/css/icon_set_2.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/news_icons/css/icon_set_3.css" />
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
-    ></script>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-
-    
-
     <!-- Stylesheets -->
-
     <link href="css/plugins.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
-
     <link
       rel="stylesheet"
       type="text/css"
-      href="homepages/hotel/css/hotel-style.css"
+      href="%PUBLIC_URL%/homepages/hotel/css/hotel-style.css"
       media="screen"
     />
     <link
@@ -66,21 +41,29 @@
       type="text/css"
     />
     <link
-      href="homepages/restaurant/css/restaurant-style.css"
+      href="%PUBLIC_URL%/homepages/restaurant/css/restaurant-style.css"
       media="screen"
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" type="text/css" href="css/slick.css" />
-    <link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/slick.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="%PUBLIC_URL%/css/slick-theme.css"
+    />
     <!-- JavaScript Libraries -->
+    <!-- <link rel="stylesheet" href="/css/icons.css"> -->
 
+    <script src="js/jquery.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/functions.js"></script>
     <link
       href="plugins/bootstrap-switch/bootstrap-switch.css"
       rel="stylesheet"
     />
     <script src="plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
-    <script src="js/functions.js"></script>
+
     <!-- SLIDER REVOLUTION 5.x SCRIPTS  -->
     <link
       rel="stylesheet"
@@ -221,7 +204,7 @@
         text-align: left;
       }
     </style>
-    <script>
+    <!-- <script>
       $(document).ready(function () {
         $(".carousel").owlCarousel({
           items: 3,
@@ -232,7 +215,7 @@
           autoplayTimeout: 3000,
         });
       });
-    </script>
+    </script> -->
   </head>
   <body>
     <!-- Fallback for Disabled JavaScript -->
